--- a/learn/style/baidu.css
+++ b/learn/style/baidu.css
@@ -1,8 +1,8 @@
 #top {
-	height: 50px;
-	margin: 0 auto;
-	padding: 0 0;
-	text-align: center;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 30px;
 }
 
 #top-right-text {
@@ -15,7 +15,8 @@
 	margin-right: 16px;
 	float: left;
 	list-style-type: none;
-	height: 20px;
+	height: 30px;
+	line-height: 30px;
 }
 
 .link {
@@ -35,107 +36,96 @@
 }
 
 #more-production {
-	position: relative;
-	top: -5px;
-	padding-top: 5px;
 	width: 60px;
+	text-align: center;
 	color: white;
 	background-color: rgb(30, 134, 255);
 }
 
-#main img {
+#main {
 	position: absolute;
-	width: 450px;
-	height: 200px;
-	left: 500px;
-	top: 70px;
+	display: block;
+	width: 55%;
+	top: 15%;
+	left: 25%;
+}
+
+#main img {
+	width: 60%;
+	height: 55%;
+	margin-left: 15%;
 }
 
 #search {
-	width: 60%;
+	width: 100%;
 	height: 30px;
-	position: absolute;
-	left: 25%;
-	top: 300px;
 }
 
 #search-box {
 	font-size: 14px;
 	border: 1px solid #919191;
 	border-right: none;
-	width: 70%;
+	width: 80%;
 	height: 30px;
-	margin: 0;
-	padding: 0;
 }
 
 #search-button {
 	font-size: 14px;
 	color: white;
-	height: 32px;
-	width: 100px;
+	height: 34px;
+	width: 15%;
 	margin-left: -8px;
-	margin-top: 1px;
 	background-color: #4249ff;
 	border: none;
-	border-top: 1px solid #4249ff;
-	border-bottom: 1px solid #4249ff;
 }
 
 #bottom {
 	position: absolute;
-	left: 320px;
+	left: 25%;
 	bottom: 30px;
-	width: 800px;
+	width: 60%;
+	height: 80px;
 }
 
 .erweima {
 	float: left;
 	margin-right: 20px;
-	width: 150px;
+	width: 120px;
 	height: 60px;
 }
 
-.erweima img {
-	position: relative;
-	margin-right: 0;
-}
-
 .erweima div {
-	position: relative;
-	left: -20px;
-	top: 10px;
+	padding-top: 5px;
 	float: right;
 	font-size: 13px;
-	height: 40px;
+	height: 100%;
 	color: #404040;
 }
 
-#message {
-	width: 500px;
-	height: 100px;
+.about {
 	position: absolute;
-	bottom: 10px;
-	left: 300px;
+	left: 260px;
+	top: -14px;
+	width: 300px;
+	height: 30px;
 }
 
-#message ul li {
+.about li {
 	margin-right: 10px;
-	font-size: 13px;
 	float: left;
 	list-style-type: none;
-	height: 20px;
-	margin-top: 40px;
 }
 
-#message ul li a {
+.about li a {
+	font-size: 13px;
 	text-decoration: underline;
 	color: #222;
 }
 
-#message p {
+p.message {
 	font-size: 13px;
-	position: absolute;
-	bottom: -16px;
-	margin-left: 40px;
+	margin-top: 33px;
+	margin-left: 300px;
+	width: 700px;
+	]
 }
