--- a/learn/style/baidu.css
+++ b/learn/style/baidu.css
@@ -1,3 +1,8 @@
+body {
+	margin: 0;
+	padding: 0;
+}
+
 #top {
 	position: absolute;
 	top: 0;
@@ -11,7 +16,7 @@
 	top: 0;
 }
 
-#top-right-text ul li {
+#top-right-text>ul>li {
 	margin-right: 16px;
 	float: left;
 	list-style-type: none;
@@ -26,6 +31,30 @@
 	font-family: 宋体;
 }
 
+.link ul {
+	padding: 3px 10px;
+	margin-left: -10px;
+	border: 1px solid #000;
+	position: absolute;
+	list-style: none;
+	display: none;
+}
+
+.link:hover ul {
+	display: block;
+}
+
+.link ul li {
+	height: 20px;
+	line-height: 20px;
+}
+
+.link ul li a {
+	text-decoration: none;
+	color: #222;
+	font-size: 8px;
+}
+
 .unuser {
 	font-weight: bold;
 	color: #111;
@@ -36,10 +65,45 @@
 }
 
 #more-production {
-	width: 60px;
+	width: 70px;
 	text-align: center;
 	color: white;
 	background-color: rgb(30, 134, 255);
+}
+
+#sidebar {
+	position: absolute;
+	right: 15px;
+	top: 0;
+	width: 70px;
+	padding: 0;
+	list-style-type: none;
+	border: 1px solid #000;
+	border-bottom: none;
+	display: none;
+}
+
+#sidebar li {
+	position: relative;
+	width: 100%;
+	height: 100px;
+	background-color: #aaa;
+	border-bottom: 1px solid #000;
+}
+
+#sidebar li p {
+	text-decoration: underline;
+	color: #333;
+	font-size: 10px;
+	margin-left: 12px;
+	margin-top: 6px;
+}
+
+#sidebar li img {
+	margin-left: 10px;
+	margin-top: 10px;
+	width: 50px;
+	height: 50px;
 }
 
 #main {
